<resources>
    <string name="app_name">My app Portfolio!</string>

    <string name="lbl_title">My nanodegree apps!</string>
    <string name="btn_spotify">Spotify Streamer</string>
    <string name="btn_scores">Scores App</string>
    <string name="btn_library">Library App</string>
    <string name="btn_bigger">Build it Bigger</string>
    <string name="btn_reader">XYZ Reader</string>
    <string name="btn_my_app">Capstone: My Own App</string>
    <string name="action_settings">Settings</string>
</resources>
