<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_title"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_spotify"
        android:id="@+id/btn_spotify"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/udacious"
        android:layout_below="@+id/txt_title"
        android:onClick="sendMessage"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_scores"
        android:id="@+id/btn_scores"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/udacious"
        android:layout_below="@+id/btn_spotify"
        android:onClick="sendMessage"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_library"
        android:id="@+id/btn_library"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/udacious"
        android:layout_below="@+id/btn_scores"
        android:onClick="sendMessage"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_bigger"
        android:id="@+id/btn_bigger"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/udacious"
        android:layout_below="@+id/btn_library"
        android:onClick="sendMessage"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_reader"
        android:id="@+id/btn_reader"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/udacious"
        android:layout_below="@+id/btn_library"
        android:onClick="sendMessage"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_my_app"
        android:id="@+id/btn_my_app"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/material_red_700"
        android:layout_below="@+id/btn_reader"
        android:onClick="sendMessage"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
